# projet_big_data_cytech_25

./: README.md  docker-compose.yml
.metals/: metals.lock.db  metals.mv.db
ex01_data_retrieval/: build.sbt
ex02_data_ingestion/: build.sbt  ingest_log.txt  run_log.txt  run_log_final.txt  run_log_retry.txt
ex02_data_ingestion/src/main/scala/: CheckSchema.scala  DataValidation.scala  IngestReferenceData.scala
ex02_data_ingestion/temp_validated_data/: .part-00000-9f2bc253-5b99-4032-868a-97ab9334956c-c000.snappy.parquet.crc  .part-00001-9f2bc253-5b99-4032-868a-97ab9334956c-c000.snappy.parquet.crc  .part-00003-9f2bc253-5b99-4032-868a-97ab9334956c-c000.snappy.parquet.crc  .part-00005-9f2bc253-5b99-4032-868a-97ab9334956c-c000.snappy.parquet.crc  part-00000-9f2bc253-5b99-4032-868a-97ab9334956c-c000.snappy.parquet
ex03_sql_table_creation/: creation.sql  insertion.sql
ex04_dashboard/: Dockerfile  STREAMLIT_GUIDE.md  requirements.txt  sample_queries.sql  streamlit_app.py  verify_setup.py
ex05_ml_prediction_service/: Dockerfile  README.md  main.py  pyproject.toml  train_model.py
ex06_airflow/: Dockerfile  README.md
ex06_airflow/dags/: pipeline_dag.py
